--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       <div class="col-1 ms-2">
         <input
           type="number"
-          id="cantidad-cartas"
+          id="input-número"
           class="form-control"
           min="1"
           max="10"
@@ -42,6 +42,7 @@
         <button id="sort">Sort</button>
       </div>
     </div>
+
     <!-- Espacio a considerar cuando  de generen las cartas-->
     <div class="container-fluid d-flex" id="mostrar-cartas">
       <!--  
@@ -53,6 +54,7 @@
         </div>
       </div>-->
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
