Falta pasar objetoCarta al array cartasDesordenadas

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,8 @@
         </div>
       </div>-->
     </div>
+    <div class="ms-3 fw-bold">Buble Sort:</div>
+    <div class="container-fluid d-flex" id="ordenar-cartas"></div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
