--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
       </div>-->
     </div>
     <div class="ms-3 fw-bold">Buble Sort:</div>
-    <div class="container-fluid d-flex" id="ordenar-cartas"></div>
+    <div class="container-fluid d-flex" id="cartas-ordenadas"></div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
