--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+
     <title>Hello Rigo with Vanilla.js</title>
     <link
       rel="stylesheet"
@@ -55,8 +57,7 @@
       </div>-->
     </div>
     <div class="ms-3 fw-bold">Buble Sort:</div>
-    <div class="container-fluid d-flex" id="cartas-ordenadas"></div>
-
+    <div class="ms-3" id="cartas-ordenadas"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
