revisión ok. Finalizado

--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,14 @@
   <body class="bg-success">
     <div class="d-flex flex-row ms-3 mt-3">
       <div class="col-auto" id="form">
-        <label for="númerosDeCartas" class="col-form-label">
+        <label for="numbersDeCartas" class="col-form-label">
           <p class="fw-bold">Cantidad de Cartas:</p>
         </label>
       </div>
       <div class="col-1 ms-2">
         <input
           type="number"
-          id="input-número"
+          id="input-number"
           class="form-control"
           min="1"
           max="10"
@@ -51,7 +51,7 @@
       <div class="card">
         <div class="card-body">
           <div class="position-absolute top-0 start-0" id="palo-superior">♦</div>
-          <div id="número-central">10</div>
+          <div id="number-central">10</div>
           <div class="position-absolute bottom-0 end-0" id="palo-inferiror">♦</div>
         </div>
       </div>-->
